--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     <div class="banner">
         <img src="./resources/images/banner.jpg" alt="doing group-study">
         <div>
-            <h1>Learn Something New Everyday</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit</p>
+            <h1 class="banner-heading">Learn Something New Everyday</h1>
+            <p class="banner-text">Lorem ipsum dolor sit amet consectetur adipiscing elit</p>
             <button>Start Here</button>
         </div>
     </div>
@@ -43,8 +43,7 @@
                 <p>
                     Hard work is the most important key to success. Achievements without hard work are impossible. An idle person can never gain anything if they sit and wait for a better opportunity to come.
                 </p>
-                <br>
-                <p>Emanuel Sr Strategist at Hiring.com</p>
+                <p class="home-of-motivation">Emanuel Sr Strategist at Hiring.com</p>
             </div>
         </div>
 
@@ -52,9 +51,11 @@
             <div class="rectangle">
                 <img class="rec-img" src="./resources/images/information-orientation.jpg" alt="people walking around">
                 <div class="info">
-                    <h2>Orientation Date</h2>
-                    <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
-                    <a href="#">Read More</a>
+                    <div class="info-body">
+                        <h2>Orientation Date</h2>
+                        <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
+                        <a href="#">Read More</a>
+                    </div>
                 </div>
             </div>
             <div class="rectangle">
@@ -66,7 +67,7 @@
                 </div>
             </div>
             <div class="rectangle">
-                <img src="./resources/images/information-guest-lecture.jpg" alt="a happy old man">
+                <img class="guest" src="./resources/images/information-guest-lecture.jpg" alt="a happy old man">
                 <div class="info">
                     <h2>Our Guest Lecture</h2>
                     <p>Join a keynote with Oliver Sack about music in medical treatment</p>
@@ -76,6 +77,47 @@
         </div>
 
     </div>
+
+    <section>
+        <h1>Start Learning</h1>
+        <div class="box">
+            <img src="./resources/images/course-software.jpg" alt="a couple of computers">
+            <h2>Software Engineering</h2>
+            <p>COURSES</p>
+            <p>
+            Web Development, Mobile Development, iOT, APIs.
+            </p>
+        </div>
+        <div class="box">
+            <img src="./resources/images/course-computer-art.jpg" alt="a mobile phone held by one hand">
+            <h2>Computer Art</h2>
+            <p>COURSES</p>
+            <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation.</p>
+        </div>
+        <div class="box">
+            <img src="./resources/images/course-design.jpg" alt="a detailed camera">
+            <h2>Design</h2>
+            <p>COURSES</p>
+            <p>User Experience Design, User Research, Visual Design.</p>
+        </div>
+        <div class="box">
+            <img src="./resources/images/course-data.jpg" alt="a laptop">
+            <h2>Data</h2>
+            <p>COURSES</p>
+            <p>Data Science, Big Data, SQL, Data Visualization.</p>
+        </div>
+        <div class="box">
+            <img src="./resources/images/course-business.jpg" alt="a chess board">
+            <h2>Business</h2>
+            <p>COURSES</p>
+            <p>Product Development, Business Development, Startup.</p>
+        </div>
+        <div class="box">
+            <img src="./resources/images/course-marketing.jpg" alt="a smart watch">
+            <p>COURSES</p>
+            <p>Analytics, Content Marketing, Mobile Marketing.</p>
+        </div>
+    </section>
 </main>
 
 </body>
