desktop version complete!

--- a/index.html
+++ b/index.html
@@ -7,118 +7,182 @@
     <title>Colmar Academy</title>
     <link rel="stylesheet" href="./resources/css/style.css">
 </head>
+
 <body>
 
     <header>
-    <img class="logo" src="./resources/images/ic-logo.svg" alt="the page logo">
-    <h2>COLMAR <span>ACADEMY</span></h2>
-    <nav>
-        <ul>
-            <li><a href="#">On Campus</a></li>
-            <li><a href="#">Online</a></li>
-            <li><a href="#">Or Companies</a></li>
-            <li><a href="#">Sign In</a></li>
-        </ul>
-    </nav>
-</header>
+        <img class="logo" src="./resources/images/ic-logo.svg" alt="the page logo">
+        <h2>COLMAR <span>ACADEMY</span></h2>
+        <nav>
+            <ul>
+                <li><a href="#">On Campus</a></li>
+                <li><a href="#">Online</a></li>
+                <li><a href="#">Or Companies</a></li>
+                <li><a href="#">Sign In</a></li>
+            </ul>
+        </nav>
+    </header>
 
-<section>
-    <div class="banner">
-        <img src="./resources/images/banner.jpg" alt="doing group-study">
-        <div>
-            <h1 class="banner-heading">Learn Something New Everyday</h1>
-            <p class="banner-text">Lorem ipsum dolor sit amet consectetur adipiscing elit</p>
-            <button>Start Here</button>
-        </div>
-    </div>
-</section>
-
-<main>
-    <div class="practice">
-
-        <div class="left-main">
-            <img class="hardworker" src="./resources/images/information-main.jpg" alt="hard working man">
-            <div class="motivation">
-                <h1>It Doesn't Hurt To Keep Practicing</h1>
-                <p>
-                    Hard work is the most important key to success. Achievements without hard work are impossible. An idle person can never gain anything if they sit and wait for a better opportunity to come.
-                </p>
-                <p class="home-of-motivation">Emanuel Sr Strategist at Hiring.com</p>
+    <section>
+        <div class="banner">
+            <img src="./resources/images/banner.jpg" alt="doing group-study">
+            <div>
+                <h1 class="banner-heading">Learn Something New Everyday</h1>
+                <p class="banner-text">Lorem ipsum dolor sit amet consectetur adipiscing elit</p>
+                <button type="button">Start Here</button>
             </div>
         </div>
+    </section>
 
-        <div class="right-main">
-            <div class="rectangle">
-                <img class="rec-img" src="./resources/images/information-orientation.jpg" alt="people walking around">
-                <div class="info">
-                    <div class="info-body">
-                        <h2>Orientation Date</h2>
-                        <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
+    <main>
+        <div class="practice">
+
+            <div class="left-main">
+                <img class="hardworker" src="./resources/images/information-main.jpg" alt="hard working man">
+                <div class="motivation">
+                    <h1>It Doesn't Hurt To Keep Practicing</h1>
+                    <p>
+                        Hard work is the most important key to success. Achievements without hard work are impossible. An idle person can never gain anything if they sit and wait for a better opportunity to come.
+                    </p>
+                    <p class="home-of-motivation">Emanuel Sr Strategist at Hiring.com</p>
+                </div>
+            </div>
+
+            <div class="right-main">
+                <div class="rectangle">
+                    <img class="rec-img" src="./resources/images/information-orientation.jpg" alt="people walking around">
+                    <div class="info">
+                        <div class="info-body">
+                            <h2>Orientation Date</h2>
+                            <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
+                            <a href="#">Read More</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="rectangle">
+                    <img class="rec-img" src="./resources/images/information-campus.jpg" alt="people sitting at a table">
+                    <div class="info">
+                        <h2>Our Campus</h2>
+                        <p>Find which campus is close by you</p>
+                        <a href="#">Read More</a>
+                    </div>
+                </div>
+                <div class="rectangle">
+                    <img class="guest" src="./resources/images/information-guest-lecture.jpg" alt="a happy old man">
+                    <div class="info">
+                        <h2>Our Guest Lecture</h2>
+                        <p>Join a keynote with Oliver Sack about music in medical treatment</p>
                         <a href="#">Read More</a>
                     </div>
                 </div>
             </div>
-            <div class="rectangle">
-                <img class="rec-img" src="./resources/images/information-campus.jpg" alt="people sitting at a table">
-                <div class="info">
-                    <h2>Our Campus</h2>
-                    <p>Find which campus is close by you</p>
-                    <a href="#">Read More</a>
-                </div>
-            </div>
-            <div class="rectangle">
-                <img class="guest" src="./resources/images/information-guest-lecture.jpg" alt="a happy old man">
-                <div class="info">
-                    <h2>Our Guest Lecture</h2>
-                    <p>Join a keynote with Oliver Sack about music in medical treatment</p>
-                    <a href="#">Read More</a>
-                </div>
-            </div>
+
         </div>
 
-    </div>
+        <section>
+            <h1>Start Learning</h1>
+            <div class="box-container">
+                <div class="box">
+                    <img class="box-img" src="./resources/images/course-software.jpg" alt="a couple of computers">
+                    <div class="box-content">
+                        <h2>Software Engineering</h2>
+                        <p>COURSES</p>
+                        <p>
+                        Web Development, Mobile Development, iOT, APIs.
+                        </p>
+                    </div>
+                </div>
+                <div class="box">
+                    <img class="box-img" src="./resources/images/course-computer-art.jpg" alt="a mobile phone held by one hand">
+                    <div class="box-content">
+                        <h2>Computer Art</h2>
+                        <p>COURSES</p>
+                        <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation.</p>
+                    </div>
+                </div>
+                <div class="box">
+                    <img class="box-img" src="./resources/images/course-design.jpg" alt="a detailed camera">
+                    <div class="box-content">
+                        <h2>Design</h2>
+                        <p>COURSES</p>
+                        <p>User Experience Design, User Research, Visual Design.</p>
+                    </div>
+                </div>
+                <div class="box">
+                    <img class="box-img" src="./resources/images/course-data.jpg" alt="a laptop">
+                    <div class="box-content">
+                        <h2>Data</h2>
+                        <p>COURSES</p>
+                        <p>Data Science, Big Data, SQL, Data Visualization.</p>
+                    </div>
+                </div>
+                <div class="box">
+                    <img class="box-img" src="./resources/images/course-business.jpg" alt="a chess board">
+                    <div class="box-content">
+                        <h2>Business</h2>
+                        <p>COURSES</p>
+                        <p>Product Development, Business Development, Startup.</p>
+                    </div>
+                </div>
+                <div class="box">
+                    <img class="box-img" src="./resources/images/course-marketing.jpg" alt="a smart watch">
+                    <div class="box-content">
+                        <h2>Marketing</h1>
+                        <p>COURSES</p>
+                        <p>Analytics, Content Marketing, Mobile Marketing.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 
     <section>
-        <h1>Start Learning</h1>
-        <div class="box">
-            <img src="./resources/images/course-software.jpg" alt="a couple of computers">
-            <h2>Software Engineering</h2>
-            <p>COURSES</p>
-            <p>
-            Web Development, Mobile Development, iOT, APIs.
-            </p>
+        <div>
+            <h1 class="section-heading">Thesis Exhibit</h1>
         </div>
-        <div class="box">
-            <img src="./resources/images/course-computer-art.jpg" alt="a mobile phone held by one hand">
-            <h2>Computer Art</h2>
-            <p>COURSES</p>
-            <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation.</p>
-        </div>
-        <div class="box">
-            <img src="./resources/images/course-design.jpg" alt="a detailed camera">
-            <h2>Design</h2>
-            <p>COURSES</p>
-            <p>User Experience Design, User Research, Visual Design.</p>
-        </div>
-        <div class="box">
-            <img src="./resources/images/course-data.jpg" alt="a laptop">
-            <h2>Data</h2>
-            <p>COURSES</p>
-            <p>Data Science, Big Data, SQL, Data Visualization.</p>
-        </div>
-        <div class="box">
-            <img src="./resources/images/course-business.jpg" alt="a chess board">
-            <h2>Business</h2>
-            <p>COURSES</p>
-            <p>Product Development, Business Development, Startup.</p>
-        </div>
-        <div class="box">
-            <img src="./resources/images/course-marketing.jpg" alt="a smart watch">
-            <p>COURSES</p>
-            <p>Analytics, Content Marketing, Mobile Marketing.</p>
+        <div class="pre-footer">
+            <div class="main-vid">
+                <div class="vid-container">
+                    <video class="vid" controls>
+                        <source src="./resources/videos/thesis.mp4" type="video/mp4">
+                    </video>
+                </div>
+                <div class="vid-content">
+                    <h2>Reimagine Urban</h2>
+                    <p>Urban quality of life is a concept that has the challenge to solve the problems of urban areas, to control urban sprawl and to prevent environmental deterioration. ... The study classified urban quality of life into seven dimensions: environmental, physical, mobility, social, psychological, economical and political.</p>
+                </div>
+            </div>
+
+            <div class="next-up">
+                <div class="next-line">
+                    <div class="next-content">
+                        <img class="next-img" src="./resources/images/thesis-fisma.jpg" alt="a mobile phone and some documents">
+                        <div class="next-text">
+                            <h2>Fimsa: Design and Prototype</h2>
+                            <p>Designer showcase of new prototype product</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="next-line">
+                    <div class="next-content">
+                        <img class="next-img" src="./resources/images/thesis-now-and-then.jpg" alt="a tall building">
+                        <div class="next-text">
+                            <h2>Now and Then</h2>
+                            <p>Research study about New York</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
-</main>
+
+    <footer>
+        <div>
+            <p>2016 Colmar Academy. All rights reserved</p>
+            <a class="last-words" href="#">Terms</a>
+            <a class="last-words" href="#">Privacy</a>
+        </div>
+    </footer>
 
 </body>
 </html>
